# opencascade-practice

./: CMakeLists.txt  build.sh  watch.sh
bottle-tutorial/: .gitignore  CMakeLists.txt  README.md  build.sh
bottle-tutorial/src/: main.cpp
qt-example/: .gitignore  CMakeLists.txt  MakeBottle.h  camera-controller.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mouse-input-monitor.h  occview.cpp  occview.h  select-controller.h
qt-example/src/: CMakeLists.txt  camera-controller.h  main.cpp  occview.h  select-controller.h
src/: main.cpp
